añadidos al foto pokemon component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,12 @@
-<h1>Componente home</h1>
+<main id="container">
+  <app-foto-pokemon></app-foto-pokemon>
+  <div id="tarjetasContainer">
+    <app-tarjeta-pokemon></app-tarjeta-pokemon>
+    <app-tarjeta-pokemon></app-tarjeta-pokemon>
+    <app-tarjeta-pokemon></app-tarjeta-pokemon>
+    <app-tarjeta-pokemon></app-tarjeta-pokemon>
+    <app-tarjeta-pokemon></app-tarjeta-pokemon>
+    <app-tarjeta-pokemon></app-tarjeta-pokemon>
+  </div>
+  
+</main>
