--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,10 @@
 <main id="container">
   <app-foto-pokemon></app-foto-pokemon>
   <div id="tarjetasContainer">
-    <app-tarjeta-pokemon></app-tarjeta-pokemon>
-    <app-tarjeta-pokemon></app-tarjeta-pokemon>
-    <app-tarjeta-pokemon></app-tarjeta-pokemon>
-    <app-tarjeta-pokemon></app-tarjeta-pokemon>
-    <app-tarjeta-pokemon></app-tarjeta-pokemon>
-    <app-tarjeta-pokemon></app-tarjeta-pokemon>
+    <app-tarjeta-pokemon *ngFor="let pokemon of listaPokemon" [data]="pokemon">
+      
+    </app-tarjeta-pokemon>
+    
   </div>
   
 </main>
