--- a/src/app/components/tarjeta-pokemon/tarjeta-pokemon.component.html
+++ b/src/app/components/tarjeta-pokemon/tarjeta-pokemon.component.html
@@ -1,8 +1,8 @@
-<div id="container" class="seleccionado">
-    <img src="./../../../assets/img/arrow-drop-down-svgrepo-com.svg" alt="" id="flecha">
-    <div id="tarjeta">
+<div id="container" [ngClass]="{seleccionado:seleccionado}">
+    <img src="./../../../assets/img/arrow-drop-down-svgrepo-com.svg" alt="" id="flecha" *ngIf="seleccionado">
+    <div id="tarjeta" (click)="clickeado.emit(id)">
         <div id="circulo"></div>
-        <img src='https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/{{id}}.png' alt="img pokemon">
+        <img src='https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{id}}.png' alt="img pokemon">
         <span>No. {{id}}</span>
         <span *ngIf="data">{{data.name | titlecase}}</span>
     </div>
