--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,18 @@
 <main id="container">
-  <app-foto-pokemon></app-foto-pokemon>
-  <div id="tarjetasContainer">
-    <app-tarjeta-pokemon *ngFor="let pokemon of listaPokemon" [data]="pokemon">
-      
+  <app-foto-pokemon [pokemon]="pokemonSeleccionado"></app-foto-pokemon>
+  <div id="tarjetasContainer" #tarjetas (scroll)="onScroll($event)">
+    <app-tarjeta-pokemon
+      *ngFor="let pokemon of listaPokemon"
+      [data]="pokemon"
+      [seleccionado]="pokemon.name===pokemonSeleccionado?.name"
+      (clickeado)="tarjetaClickeada($event)"
+    >
     </app-tarjeta-pokemon>
-    
+    <img
+      src="./../../../assets/img/Poké_Ball_icon.svg"
+      alt=""
+      id="spinner"
+      *ngIf="cargando"
+    />
   </div>
-  
 </main>
