--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -36,4 +36,28 @@ app-foto-pokemon{
     display: flex;
     flex-direction: column;
     gap:5px;
+    max-height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden ;
+}
+
+#spinner{
+    max-height: 50px;
+    animation-name: spin;
+  animation-duration: 5000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+  /* transform: rotate(3deg); */
+   /* transform: rotate(0.3rad);/ */
+   /* transform: rotate(3grad); */ 
+   /* transform: rotate(.03turn);  */
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
 }
