cuerpo y llamadas API basicas de detalle

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -30,6 +30,11 @@
 
 app-foto-pokemon{
    margin-left: 100px;
+   z-index: 2;
+}
+app-detalle{
+    position: absolute;
+    z-index: 1;
 }
 
 #tarjetasContainer{
@@ -61,3 +66,5 @@ app-foto-pokemon{
         transform:rotate(360deg);
     }
 }
+
+
