--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,11 @@
 <main id="container">
+  <app-detalle [pokemon]="pokemonSeleccionado"> </app-detalle>
   <app-foto-pokemon [pokemon]="pokemonSeleccionado"></app-foto-pokemon>
   <div id="tarjetasContainer" #tarjetas (scroll)="onScroll($event)">
     <app-tarjeta-pokemon
       *ngFor="let pokemon of listaPokemon"
       [data]="pokemon"
-      [seleccionado]="pokemon.name===pokemonSeleccionado?.name"
+      [seleccionado]="pokemon.name === pokemonSeleccionado?.name"
       (clickeado)="tarjetaClickeada($event)"
     >
     </app-tarjeta-pokemon>
