--- a/src/app/components/tarjeta-pokemon/tarjeta-pokemon.component.scss
+++ b/src/app/components/tarjeta-pokemon/tarjeta-pokemon.component.scss
@@ -1,44 +1,48 @@
-#container{
-    position: relative;
-    display: flex;
-    align-items: center;
-    isolation: isolate;
-    &.seleccionado::before{
-        position: absolute;
-        content: "";
-        width: calc(100% + 8px);
-        height: 120%;
-        left: 0px;
-        background-color: #da4443;
-        z-index: -1;
-        border-radius: 5px;
-    }
-
-}
-#flecha{
+#container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  isolation: isolate;
+  &.seleccionado::before {
     position: absolute;
-    padding-left: -20px;
+    content: "";
+    width: calc(100% + 8px);
+    height: 120%;
+    left: 0px;
+    background-color: #da4443;
+    z-index: -1;
+    border-radius: 5px;
+  }
+}
+#flecha {
+  position: absolute;
+  padding-left: -20px;
 }
 
-#tarjeta{
-    display: flex;
-    align-items: center;
-    background-color: #fceab8;
-    border-radius: 25px 5px 5px 25px;
-    width: 100%;
-    font-size: larger;
-    padding-left: 5px;
-    gap: 1rem;
-    
+#tarjeta {
+  display: flex;
+  align-items: center;
+  background-color: #fceab8;
+  border-radius: 25px 5px 5px 25px;
+  width: 100%;
+  font-size: larger;
+  padding-left: 5px;
+  gap: 1rem;
+  &.seleccionado {
+    background-color: #f49545;
+    -webkit-box-shadow: inset 0px 0px 7px 4px #fceab8;
+    -moz-box-shadow: inset 0px 0px 7px 4px #fceab8;
+    box-shadow: inset 0px 0px 7px 4px #fceab8;
+  }
+};
+
+#circulo {
+  border-radius: 50%;
+  height: 30px;
+  aspect-ratio: 1;
+  background-color: rgba(0, 0, 0, 0.13);
 }
 
-#circulo{
-    border-radius: 50%;
-    height: 30px;
-    aspect-ratio: 1;
-    background-color: rgba(0, 0, 0, 0.13);
-}
-
-img{
-    max-height: 40px;
+img {
+  max-height: 40px;
 }
