--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,15 @@
 <main id="container">
-  <app-detalle [pokemon]="pokemonSeleccionado"> </app-detalle>
-  <app-foto-pokemon [pokemon]="pokemonSeleccionado"></app-foto-pokemon>
+  <app-detalle
+    [pokemon]="pokemonSeleccionado"
+    (clicked)="cambiarEstadoDetalle()"
+    [abierto]="detalle"
+    [ngClass]="{ abierto: detalle }"
+  >
+  </app-detalle>
+  <app-foto-pokemon
+    [pokemon]="pokemonSeleccionado"
+    [ngClass]="{ abierto: detalle }"
+  ></app-foto-pokemon>
   <div id="tarjetasContainer" #tarjetas (scroll)="onScroll($event)">
     <app-tarjeta-pokemon
       *ngFor="let pokemon of listaPokemon"
