--- a/src/app/components/detalle/detalle.component.scss
+++ b/src/app/components/detalle/detalle.component.scss
@@ -1,9 +1,15 @@
-#container {
+@use "./../../../assets/styles/var.scss";
+#container{
+  display: grid;
+  grid-template-columns: 1fr 60px;
+}
+#datos {
   height: 600px;
-  width: 95vw;
+  width: 90vw;
   background-color: #fceab8;
   display: grid;
   grid-template-rows: 1fr 3fr 3fr;
+  
   .area:first-child {
     flex-grow: 1;
     background-color: #bfc3ce;
@@ -26,11 +32,17 @@
     background-size: 20px 20px;
   }
   .area {
-    padding-left: 55vw;
-    padding-right: 10px;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    padding-left: 60%;
+    padding-right: 20px;
     display: flex;
     align-items: center;
     height: 100%;
+    font-size: larger;
+    p{
+      margin: 10px 10px;}
   }
   .area:last-child {
     background: repeating-linear-gradient(
@@ -40,5 +52,86 @@
       #bfd678 2px,
       #bfd678 4px
     );
+    p{
+      margin: 20px 10px;}
+   
+  }
+}
+
+#descripcionContainer{
+  background-color: #f8f7db;
+  display: grid;
+  grid-template-columns: 20px 1fr 20px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2); // Added standard property for compatibility
+    height: 70%;
+  div{
+    background-color: #daeac4;
+    margin-top: 10px;
+    height: 90%;
+    margin: 5px;
+    
+    &:first-child{
+      border-radius: 0 8px 8px 0;
+    }
+    &:last-child{
+      border-radius: 8px 0 0 8px;
+    }
+  }
+}
+
+
+.etiqueta{
+  display: inline-block;
+  background-color: #67bcea;
+  border-radius: 5px;
+  color: var.$texto-blanco;
+  padding: 5px 20px;
+  font-size: x-large;
+  width: 100px;
+  text-align: center;
+  margin-right: 20px;
+}
+
+.tipo{
+  background-color: gray;
+  border-radius: 5px;
+  color: var.$texto-blanco;
+  padding: 5px 20px;
+  margin-left: 5px;
+
+}
+
+button{
+  background-color: #fceab8;
+  border-radius: 0 25px 25px 0;
+  border: unset;
+  cursor: pointer;
+  
+  img{
+    transition: 0.5s;
+    transition-timing-function: ease-in-out;
+    &.girar{
+      rotate: 180deg;
+    }
+    &:hover{
+      scale: 1.1;
+    }
+  }
+}
+#backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0,0,0,0.378);
+  z-index: -1;
+  opacity: 1;
+  &.escondido{
+    pointer-events: none;
+    opacity: 0;
   }
 }
