--- a/src/app/components/tarjeta-pokemon/tarjeta-pokemon.component.html
+++ b/src/app/components/tarjeta-pokemon/tarjeta-pokemon.component.html
@@ -1,6 +1,6 @@
 <div id="container" [ngClass]="{seleccionado:seleccionado}">
-    <img src="./../../../assets/img/arrow-drop-down-svgrepo-com.svg" alt="" id="flecha" *ngIf="seleccionado">
-    <div id="tarjeta" (click)="clickeado.emit(id)">
+    <img src="./../../../assets/img/Poké_Ball_icon.svg" alt="" id="flecha" *ngIf="seleccionado">
+    <div id="tarjeta" (click)="clickeado.emit(id)" [ngClass]="{seleccionado:seleccionado}">
         <div id="circulo"></div>
         <img src='https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{id}}.png' alt="img pokemon">
         <span>No. {{id}}</span>
