--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -28,13 +28,54 @@
     );
 }
 
+::-webkit-scrollbar{
+    width: 12px;
+    margin-right: 20px;
+  }
+  ::-webkit-scrollbar-thumb{
+    background-color: #e9563d;
+    border-radius: 2px;
+    /* con este thumb se hace mas pequeño el hijo que el padre*/
+    box-shadow: inset 0 0 0 2px #882a1a;
+    border-left: 1.5px solid transparent;
+    border-right: 1.5px solid transparent;
+    background-clip: padding-box;
+    cursor:grab;
+  }
+  ::-webkit-scrollbar-track {
+    border: solid #90ace7 2px;
+    cursor: pointer;
+    background: repeating-linear-gradient(
+      0deg,
+      #276d83,
+      #276d83 5px,
+      #1c4760 7px,
+      #1c4760 9px
+    );
+  }
+
+
 app-foto-pokemon{
    margin-left: 100px;
    z-index: 2;
+    transition: 0.5s;
+    transition-timing-function: ease-in-out;
+   &.abierto{
+    margin-left:50px;
+   }
 }
+
 app-detalle{
     position: absolute;
     z-index: 1;
+    left: -90vw;
+    transition: 0,5s;
+    transition-timing-function: ease-in-out;
+
+    &.abierto{
+        left: 0;
+
+    }
 }
 
 #tarjetasContainer{
@@ -44,6 +85,7 @@ app-detalle{
     max-height: 100%;
     overflow-y: scroll;
     overflow-x: hidden ;
+    margin-right: 10px;
 }
 
 #spinner{
