--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,7 @@ body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
+p{
+  margin: 0;
+}
